--- a/app/src/main/res/layout/item_container_fifth_coin.xml
+++ b/app/src/main/res/layout/item_container_fifth_coin.xml
@@ -25,9 +25,9 @@
             android:adjustViewBounds="true"
             android:padding="0dp"
             android:scaleType="fitCenter"
-            app:layout_constraintBottom_toBottomOf="@+id/coin_description"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/coin_name" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/coin_name"
@@ -37,22 +37,12 @@
             android:text="@string/coin_name"
             android:textAlignment="textStart"
             android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/coin_description"
-            app:layout_constraintStart_toStartOf="@+id/coin_description" />
-
-        <TextView
-            android:id="@+id/coin_description"
-            android:layout_width="@dimen/_255sdp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:maxLines="3"
-            android:minLines="0"
-            android:text="@string/coin_description"
-            android:textSize="15sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/coin_image"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toBottomOf="@+id/coin_image"
+            app:layout_constraintEnd_toStartOf="@+id/coin_image"
+            app:layout_constraintHorizontal_bias="0.944"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/coin_image"
+            app:layout_constraintVertical_bias="0.411" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
