--- a/app/src/main/res/layout/item_container_coins.xml
+++ b/app/src/main/res/layout/item_container_coins.xml
@@ -11,10 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/_4sdp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:padding="@dimen/_4sdp">
 
 
         <ImageView
@@ -26,6 +23,7 @@
             android:padding="0dp"
             android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="@+id/coin_description"
+            app:layout_constraintEnd_toStartOf="@+id/coin_description"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/coin_name" />
 
@@ -37,6 +35,7 @@
             android:text="@string/coin_name"
             android:textAlignment="textStart"
             android:textSize="16sp"
+            android:fontFamily="sans-serif"
             app:layout_constraintBottom_toTopOf="@+id/coin_description"
             app:layout_constraintStart_toStartOf="@+id/coin_description" />
 
@@ -48,10 +47,10 @@
             android:maxLines="3"
             android:minLines="0"
             android:text="@string/coin_description"
-            android:textSize="15sp"
+            android:textSize="14sp"
+            android:fontFamily="sans-serif"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/coin_image"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
