--- a/app/src/main/res/layout/item_container_fifth_coin.xml
+++ b/app/src/main/res/layout/item_container_fifth_coin.xml
@@ -37,6 +37,7 @@
             android:text="@string/coin_name"
             android:textAlignment="textStart"
             android:textSize="16sp"
+            android:fontFamily="sans-serif"
             app:layout_constraintBottom_toBottomOf="@+id/coin_image"
             app:layout_constraintEnd_toStartOf="@+id/coin_image"
             app:layout_constraintHorizontal_bias="0.944"
