--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,8 @@
             <EditText
                 android:id="@+id/search_bar"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_margin="@dimen/_8sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_margin="@dimen/_16sdp"
                 android:background="@drawable/background_border"
                 android:drawableStart="@drawable/ic_search"
                 android:drawablePadding="@dimen/_5sdp"
@@ -32,7 +32,7 @@
                 android:hint="@string/search"
                 android:imeOptions="actionDone"
                 android:inputType="textPersonName"
-                android:padding="@dimen/_8sdp"
+                android:paddingStart="@dimen/_12sdp"
                 android:textColor="?colorOnSecondary"
                 android:textSize="@dimen/_14sdp"
                 app:layout_constraintEnd_toEndOf="parent"
