--- a/app/src/main/res/layout/item_container_coins.xml
+++ b/app/src/main/res/layout/item_container_coins.xml
@@ -11,16 +11,15 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/_4sdp">
+        android:paddingTop="@dimen/_8sdp"
+        android:paddingBottom="@dimen/_8sdp">
 
 
         <ImageView
             android:id="@+id/coin_image"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_margin="0dp"
+            android:layout_width="@dimen/_32sdp"
+            android:layout_height="@dimen/_32sdp"
             android:adjustViewBounds="true"
-            android:padding="0dp"
             android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="@+id/coin_description"
             app:layout_constraintEnd_toStartOf="@+id/coin_description"
@@ -31,32 +30,28 @@
             android:id="@+id/coin_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
             android:gravity="start"
             android:text="@string/coin_name"
             android:textAlignment="textStart"
-            android:textSize="16sp"
-            android:fontFamily="sans-serif"
-            app:layout_constraintBottom_toTopOf="@+id/coin_description"
-            app:layout_constraintStart_toStartOf="@+id/coin_description" />
+            android:textSize="@dimen/_16sdp"
+            app:layout_constraintStart_toStartOf="@+id/coin_description"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/coin_description"
             android:layout_width="@dimen/_255sdp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
+            android:fontFamily="sans-serif"
             android:maxLines="3"
             android:minLines="0"
             android:text="@string/coin_description"
-            android:textSize="14sp"
-            android:fontFamily="sans-serif"
+            android:textSize="@dimen/_12sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/coin_name" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
 
 
 </layout>
