--- a/app/src/main/res/layout/item_container_fifth_coin.xml
+++ b/app/src/main/res/layout/item_container_fifth_coin.xml
@@ -11,19 +11,14 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/_4sdp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:padding="@dimen/_14sdp">
 
 
         <ImageView
             android:id="@+id/coin_image"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_margin="0dp"
+            android:layout_width="@dimen/_32sdp"
+            android:layout_height="@dimen/_32sdp"
             android:adjustViewBounds="true"
-            android:padding="0dp"
             android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -33,17 +28,15 @@
             android:id="@+id/coin_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
             android:gravity="start"
             android:text="@string/coin_name"
             android:textAlignment="textStart"
-            android:textSize="16sp"
-            android:fontFamily="sans-serif"
+            android:textSize="@dimen/_16sdp"
+            android:layout_marginEnd="@dimen/_8sdp"
             app:layout_constraintBottom_toBottomOf="@+id/coin_image"
             app:layout_constraintEnd_toStartOf="@+id/coin_image"
-            app:layout_constraintHorizontal_bias="0.944"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/coin_image"
-            app:layout_constraintVertical_bias="0.411" />
+            app:layout_constraintTop_toTopOf="@+id/coin_image" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
