--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
                 android:hint="@string/search"
                 android:imeOptions="actionDone"
                 android:inputType="textPersonName"
-                android:paddingStart="@dimen/_12sdp"
+                android:paddingStart="14dp"
                 android:textColor="?colorOnSecondary"
                 android:textSize="@dimen/_14sdp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -47,7 +47,7 @@
                 android:layout_marginTop="8dp"
                 android:clipToPadding="false"
                 android:orientation="vertical"
-                android:padding="@dimen/_4sdp"
+                android:padding="8dp"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
